# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wzq/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: Log.h
app/src/main/cpp/include/puller/: FFmpegAudio.h  FFmpegVideo.h
app/src/main/cpp/puller/: FFmpegAudio.cpp  FFmpegVideo.cpp
app/src/main/java/com/wzq/ffmpegdemo/: MainActivity.java
app/src/main/java/com/wzq/ffmpegdemo/constants/: constant.java
app/src/main/java/com/wzq/ffmpegdemo/puller/ui/: MainActivity.java
app/src/main/java/com/wzq/ffmpegdemo/puller/utils/: FileUtil.java  Puller.java
app/src/main/java/com/wzq/ffmpegdemo/ui/: MainActivity.java
app/src/main/java/com/wzq/ffmpegdemo/widget/: ControlLayout.java
app/src/main/res/drawable/: bg_bar.xml  thumb_bar.xml
app/src/main/res/layout/: activity_main.xml  controller_bar.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/wzq/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
